engine/CSS/player_global.css
/* ... */
body > #content > section.layout-stack #courtrecord {
	flex: none;
	width: 100%;
	height: 40vh;
	max-height: 50vh;
	overflow-y: auto;
}

body > #content > section.layout-stack #player-parametres {
	flex: none;
	width: 100%;
	max-height: 50vh;
	overflow-y: auto;
}

body > #content > section.layout-stack #screens {
	align-self: flex-start;
	width: auto;
}

/* When examination mode is active, #screen-examination extends ~32px below
   the normal #screens flow height (16px top + 16px bottom padding on #examination).
   Add matching bottom padding so panels below don't get overlapped.
   Transform on #screens scales this padding proportionally.
   The JS margin compensation accounts for this via totalPreZoomH. */
#screens:has(#screen-bottom.examination) {
	padding-bottom: 32px;
}

/* The screen container should shift when in portrait mode to allow full screen */
@media (orientation: portrait) and (hover: none) {
	body > #content > section
	{
		flex-direction: column;
		overflow-y: auto;
	}
}

/* Override to allow evenly spaced sections when playing */
#content > section::after
{
	content: none;
}


/* -------------
 * SCREENS SECTION
 * ------------- */
 
#screens
{
	position: relative;
	flex-shrink: 0;
	align-self: flex-start;
	width: var(--screen-width, 256px);
	transform: scale(var(--screen-content-scale, 1));
	transform-origin: top left;
	margin-right: var(--screen-margin-right, 0px);
	margin-bottom: var(--screen-margin-bottom, 0px);
}

#screens.pixelated
{
	image-rendering: pixelated;
	image-rendering: -moz-crisp-edges;
}

/* Additional magnification for mobile devices in portrait orientation */
@media (orientation: portrait) and (hover: none) {
	#screens
	{
		transform: scale(var(--mobile-screen-scale, 1.4));
		transform-origin: top center;
		margin-left: auto;
		margin-right: auto;
		margin-bottom: var(--screen-margin-bottom-mobile, 0px);
	}
}


#screen-meta,
#screen-top,
#screen-bottom { position:relative; }

#screen-meta {
	height:var(--meta-height);
	background:var(--color-bg-screen-meta);
	border:1px solid var(--color-border-meta);
}

#lifebar {
	position:absolute;
	top:2px; right:2px; bottom:2px;
	width:var(--lifebar-width); height:var(--lifebar-height);
	background:black;
	border:2px ridge lightgrey;
	border-radius:var(--radius-sm);
}

#lifebar div {
	float:left;
	height:var(--lifebar-height);
	transition: var(--transition-lifebar);
}
#lifebar-green 
{ 
	/*background: linear-gradient(to bottom, #40d840 0%,#80f880 11%,#00b800 22%,#00b800 78%,#009800 89%,#007000 100%);*/
	background:url(img/bar_green.gif) repeat-x green; 
}
#lifebar-red 
{ 
	/*background: linear-gradient(to bottom, #400810 0%,#680010 11%,#680010 100%); */
	background:url(img/bar_red.gif) repeat-x red;
}
#lifebar-flash 
{ 
	/*animation: lifebar_flash 1s infinite;*/
	background:url(img/bar_flash.gif) repeat-x gold;
}
@keyframes lifebar_flash
{  
    from {background: linear-gradient(to bottom, #40d840 0%,#80f880 11%,#00b800 22%,#00b800 78%,#009800 89%,#007000 100%);}
    to {background: linear-gradient(to bottom, #f1a327 0%,#ffb538 11%,#ff892d 22%,#fd9526 33%,#fd9429 44%,#f6952a 56%,#ff8e2e 67%,#ff8e38 78%,#fb7f39 89%,#d67530 100%);}
}

[id|=screen] {
	background: var(--color-bg-screen);
	box-shadow: var(--color-shadow-screen);
}

#screen-top {
	z-index:2;
	width:var(--screen-width);
	height:var(--screen-height);
	margin:var(--screen-gap) 0 0 0;
	overflow:hidden;
}

#screen-bottom {
	position:relative;
	width:var(--screen-width);
	height:var(--screen-height);
	margin:var(--screen-gap) 0 0 0;
	z-index:2;
	overflow:hidden;
}

#screen-loading
{
	visibility: hidden;

	position: absolute;
    z-index: 3;
    box-sizing: border-box;
    width:var(--screen-width);
	height:var(--screen-height);
	margin:var(--screen-gap) 0 0 0;
	padding: 0 var(--screen-gap);

    font-size: 16px;
    color: white;
}

[id|=screen] :focus { outline:none; }

/* Generic screen buttons */

[id|=screen] a {
	cursor: pointer;
	text-decoration: none;
	user-select: none;
}

[id|=screen] .bs-button.center,
[id|=screen] .bs-button.left,
[id|=screen] .bs-button.right {
	display:block;
	box-sizing:border-box;
	background-clip:padding-box;
	
	font:30px Ubuntu, sans-serif;
	text-align:center;
	line-height:107px;
}

[id|=screen] .bs-button.center {
	position:absolute;
	top:40px; left:16px;
	width:223px; height:111px;
}

[id|=screen] .bs-button.left,
[id|=screen] .bs-button.right {
	position:absolute;
	width:106px; height:80px;
}

[id|=screen] .bs-button.left {
	top:65px; left:16px;
}

[id|=screen] .bs-button.right {
	top:65px; left:134px;
}

[id|=screen] .bs-button img {
	display:block;
	margin: auto;
}

/* Button bars */
[id|=screen] .buttonbar-top {
	position:absolute;
	top:0; right:0; left:0;
	z-index:2;
	box-sizing:border-box;
}

[id|=screen] .buttonbar-bottom {
	position:absolute;
	right:0; bottom:0; left:0;
	z-index:2;
	box-sizing:border-box;
}

[id|=screen] .buttonbar-top .bs-button,
[id|=screen] .buttonbar-bottom .bs-button {
	display:block;
	position:absolute;
	padding:8px 4px 8px 4px;
	box-sizing:border-box;
	min-width:70px;
	outline:none;
	font-size:12px;
	text-align:center;
	white-space:nowrap;
	
	border: 0;
}

[id|=screen].thin-bars .buttonbar-top a,
[id|=screen].thin-bars .buttonbar-bottom a { padding-top:3px; padding-bottom:3px; }

[id|=screen] .buttonbar-top .bs-button.topleft {
	top:0; left:0;
	border-right:1px solid;
	border-bottom:1px solid;
}

[id|=screen] .buttonbar-top .bs-button.topmiddle {
	top:0; right:88px; left:88px;
	border-right:1px solid;
	border-bottom:1px solid;
	border-left:1px solid;
}

[id|=screen] .buttonbar-top .bs-button.topright {
	top:0; right:0;
	border-bottom:1px solid;
	border-left:1px solid;
}

[id|=screen] .buttonbar-bottom .bs-button.bottomleft {
	bottom:0; left:0;
	border-top:1px solid;
	border-right:1px solid;
}

[id|=screen] .buttonbar-bottom .bs-button.bottomright {
	bottom:0; right:0;
	border-top:1px solid;
	border-left:1px solid;
}
/* ... */

